--- a/student/13/match3/mainwindow.ui
+++ b/student/13/match3/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>902</width>
-    <height>628</height>
+    <width>1014</width>
+    <height>610</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QPushButton" name="resetButton">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>540</y>
-      <width>151</width>
+      <x>630</x>
+      <y>40</y>
+      <width>111</width>
       <height>28</height>
      </rect>
     </property>
@@ -30,8 +30,8 @@
    <widget class="QGroupBox" name="settingsBox">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>250</y>
+      <x>640</x>
+      <y>240</y>
       <width>291</width>
       <height>171</height>
      </rect>
@@ -82,8 +82,8 @@
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>570</x>
-      <y>430</y>
+      <x>640</x>
+      <y>420</y>
       <width>291</width>
       <height>131</height>
      </rect>
@@ -135,7 +135,7 @@
      <rect>
       <x>20</x>
       <y>80</y>
-      <width>861</width>
+      <width>971</width>
       <height>16</height>
      </rect>
     </property>
@@ -182,7 +182,7 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>200</x>
+      <x>160</x>
       <y>240</y>
       <width>91</width>
       <height>131</height>
@@ -217,10 +217,10 @@
    <widget class="QGroupBox" name="movementBox">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>780</x>
       <y>110</y>
-      <width>161</width>
-      <height>131</height>
+      <width>151</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="title">
@@ -252,43 +252,30 @@
       <string>Start</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="endPoint">
+    <widget class="QLineEdit" name="endPointLine">
      <property name="geometry">
       <rect>
        <x>50</x>
        <y>64</y>
-       <width>89</width>
+       <width>81</width>
        <height>28</height>
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="startPoint">
+    <widget class="QLineEdit" name="startPointLine">
      <property name="geometry">
       <rect>
        <x>50</x>
        <y>30</y>
-       <width>89</width>
+       <width>81</width>
        <height>28</height>
       </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="moveButton">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>100</y>
-       <width>129</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Move</string>
      </property>
     </widget>
     <widget class="QPushButton" name="moveHelpButton">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>120</x>
        <y>0</y>
        <width>21</width>
        <height>21</height>
@@ -302,14 +289,27 @@
    <widget class="QPushButton" name="closeButton">
     <property name="geometry">
      <rect>
-      <x>820</x>
+      <x>839</x>
       <y>10</y>
-      <width>61</width>
-      <height>31</height>
+      <width>51</width>
+      <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>Close</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="moveButton">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>150</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Move</string>
     </property>
    </widget>
   </widget>
@@ -318,7 +318,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>902</width>
+     <width>1014</width>
      <height>25</height>
     </rect>
    </property>
