--- a/student/13/match3/mainwindow.ui
+++ b/student/13/match3/mainwindow.ui
@@ -14,26 +14,13 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="resetButton">
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>40</y>
-      <width>111</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Reset game</string>
-    </property>
-   </widget>
    <widget class="QGroupBox" name="settingsBox">
     <property name="geometry">
      <rect>
       <x>640</x>
       <y>240</y>
       <width>291</width>
-      <height>171</height>
+      <height>141</height>
      </rect>
     </property>
     <property name="title">
@@ -83,7 +70,7 @@
     <property name="geometry">
      <rect>
       <x>640</x>
-      <y>420</y>
+      <y>390</y>
       <width>291</width>
       <height>131</height>
      </rect>
@@ -129,6 +116,19 @@
       </item>
      </layout>
     </widget>
+    <widget class="QPushButton" name="gridHelpButton">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>0</y>
+       <width>21</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>?</string>
+     </property>
+    </widget>
    </widget>
    <widget class="Line" name="line">
     <property name="geometry">
@@ -156,14 +156,14 @@
    <widget class="QLabel" name="scoreLabel">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>40</x>
       <y>10</y>
       <width>121</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>Blocks destroyed:</string>
+     <string>Score:</string>
     </property>
    </widget>
    <widget class="QLabel" name="timeLabel">
@@ -275,7 +275,7 @@
     <widget class="QPushButton" name="moveHelpButton">
      <property name="geometry">
       <rect>
-       <x>120</x>
+       <x>130</x>
        <y>0</y>
        <width>21</width>
        <height>21</height>
@@ -285,19 +285,6 @@
       <string>?</string>
      </property>
     </widget>
-   </widget>
-   <widget class="QPushButton" name="closeButton">
-    <property name="geometry">
-     <rect>
-      <x>839</x>
-      <y>10</y>
-      <width>51</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Close</string>
-    </property>
    </widget>
    <widget class="QPushButton" name="moveButton">
     <property name="geometry">
@@ -311,6 +298,32 @@
     <property name="text">
      <string>Move</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>812</x>
+      <y>10</y>
+      <width>181</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="resetButton">
+       <property name="text">
+        <string>Reset game</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="closeButton">
+       <property name="text">
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
