--- a/student/13/match3/mainwindow.ui
+++ b/student/13/match3/mainwindow.ui
@@ -26,32 +26,6 @@
     <property name="title">
      <string>Settings</string>
     </property>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>267</width>
-       <height>94</height>
-      </rect>
-     </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0" colspan="2">
-       <widget class="QCheckBox" name="delayCheck">
-        <property name="text">
-         <string>Reflex mode: delay on falling blocks</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0" colspan="2">
-       <widget class="QCheckBox" name="refillCheck">
-        <property name="text">
-         <string>Infinite mode: refill missing blocks</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
     <widget class="QPushButton" name="settingsHelpButton">
      <property name="geometry">
       <rect>
@@ -65,8 +39,34 @@
       <string>?</string>
      </property>
     </widget>
+    <widget class="QCheckBox" name="delayCheck">
+     <property name="geometry">
+      <rect>
+       <x>11</x>
+       <y>42</y>
+       <width>259</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Reflex mode: delay on falling blocks</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="refillCheck">
+     <property name="geometry">
+      <rect>
+       <x>11</x>
+       <y>85</y>
+       <width>248</width>
+       <height>26</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Infinite mode: refill missing blocks</string>
+     </property>
+    </widget>
    </widget>
-   <widget class="QGroupBox" name="groupBox_2">
+   <widget class="QGroupBox" name="gridGroupBox">
     <property name="geometry">
      <rect>
       <x>640</x>
@@ -91,31 +91,6 @@
       <string>Apply and reset</string>
      </property>
     </widget>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>40</y>
-       <width>161</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="gridGroup">
-      <item>
-       <widget class="QLineEdit" name="gridSizeXLine"/>
-      </item>
-      <item>
-       <widget class="QLabel" name="x">
-        <property name="text">
-         <string>x</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="gridSizeYLine"/>
-      </item>
-     </layout>
-    </widget>
     <widget class="QPushButton" name="gridHelpButton">
      <property name="geometry">
       <rect>
@@ -127,6 +102,39 @@
      </property>
      <property name="text">
       <string>?</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="gridSizeXLine">
+     <property name="geometry">
+      <rect>
+       <x>61</x>
+       <y>41</y>
+       <width>69</width>
+       <height>28</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="x">
+     <property name="geometry">
+      <rect>
+       <x>136</x>
+       <y>41</y>
+       <width>16</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>x</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="gridSizeYLine">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>41</y>
+       <width>70</width>
+       <height>28</height>
+      </rect>
      </property>
     </widget>
    </widget>
@@ -188,31 +196,6 @@
       <height>131</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>40</y>
-      <width>146</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="timeGroup">
-     <item>
-      <widget class="QLCDNumber" name="lcdNumberMins"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLCDNumber" name="lcdNumberSecs"/>
-     </item>
-    </layout>
    </widget>
    <widget class="QGroupBox" name="movementBox">
     <property name="geometry">
@@ -299,31 +282,64 @@
      <string>Move</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QPushButton" name="resetButton">
     <property name="geometry">
      <rect>
-      <x>812</x>
-      <y>10</y>
-      <width>181</width>
-      <height>30</height>
+      <x>813</x>
+      <y>11</y>
+      <width>85</width>
+      <height>28</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QPushButton" name="resetButton">
-       <property name="text">
-        <string>Reset game</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="closeButton">
-       <property name="text">
-        <string>Close</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <property name="text">
+     <string>Reset game</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="closeButton">
+    <property name="geometry">
+     <rect>
+      <x>904</x>
+      <y>11</y>
+      <width>80</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Close</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumberMins">
+    <property name="geometry">
+     <rect>
+      <x>251</x>
+      <y>41</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>321</x>
+      <y>41</y>
+      <width>16</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>:</string>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumberSecs">
+    <property name="geometry">
+     <rect>
+      <x>331</x>
+      <y>41</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
